# FakeNewsDetector

./: .gitignore  PROJECT_WORKFLOW_CHART.md  README.md  WORKFLOW_DIAGRAM.md  app.py  build.sh  deploy.sh  deploy_python313.sh  deploy_render.sh  fix_deployment.sh  pyproject.toml  render.yaml  requirements.txt  test_deployment.py  test_model.py  vercel.json
data/: expanded_news_dataset.csv
models/: trained_model.pkl
src/: data_preprocessing.py  feature_engineering.py  model_evaluation.py  model_training.py
static/: style.css
templates/: index.html  result.html
vectorizers/: tfidf_vectorizer.pkl
