[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-detector"
version = "1.0.0"
description = "A machine learning-based fake news detection application"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "flask>=3.0.0",
    "joblib>=1.3.0",
    "gunicorn>=21.0.0",
]
