[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-detector"
version = "1.0.0"
description = "A machine learning-based fake news detection application"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=2.0.0,<2.1.0",
    "numpy>=1.24.0,<1.25.0",
    "scikit-learn>=1.3.0,<1.4.0",
    "flask>=2.3.0,<3.0.0",
    "joblib>=1.3.0,<1.4.0",
    "gunicorn>=21.0.0,<22.0.0",
]
